--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
 
   config:
     environment:
-      CONFIG_SERVICE_PASSWORD: $CONFIG_SERVICE_PASSWORD
-    image: sqshq/piggymetrics-config
+      CONFIG_SERVICE_PASSWORD: switcher05
+    image: switcher/piggymetrics-config
     restart: always
     logging:
       options:
@@ -22,8 +22,8 @@ services:
 
   registry:
     environment:
-      CONFIG_SERVICE_PASSWORD: $CONFIG_SERVICE_PASSWORD
-    image: sqshq/piggymetrics-registry
+      CONFIG_SERVICE_PASSWORD: switcher05
+    image: switcher/piggymetrics-registry
     restart: always
     depends_on:
       config:
@@ -37,8 +37,8 @@ services:
 
   gateway:
     environment:
-      CONFIG_SERVICE_PASSWORD: $CONFIG_SERVICE_PASSWORD
-    image: sqshq/piggymetrics-gateway
+      CONFIG_SERVICE_PASSWORD: switcher05
+    image: switcher/piggymetrics-gateway
     restart: always
     depends_on:
       config:
@@ -52,12 +52,12 @@ services:
 
   auth-service:
     environment:
-      CONFIG_SERVICE_PASSWORD: $CONFIG_SERVICE_PASSWORD
-      NOTIFICATION_SERVICE_PASSWORD: $NOTIFICATION_SERVICE_PASSWORD
-      STATISTICS_SERVICE_PASSWORD: $STATISTICS_SERVICE_PASSWORD
-      ACCOUNT_SERVICE_PASSWORD: $ACCOUNT_SERVICE_PASSWORD
-      MONGODB_PASSWORD: $MONGODB_PASSWORD
-    image: sqshq/piggymetrics-auth-service
+      CONFIG_SERVICE_PASSWORD: switcher05
+      NOTIFICATION_SERVICE_PASSWORD: switcher05
+      STATISTICS_SERVICE_PASSWORD: switcher05
+      ACCOUNT_SERVICE_PASSWORD: switcher05
+      MONGODB_PASSWORD: switcher05
+    image: switcher/piggymetrics-auth-service
     restart: always
     depends_on:
       config:
@@ -69,8 +69,8 @@ services:
 
   auth-mongodb:
     environment:
-      MONGODB_PASSWORD: $MONGODB_PASSWORD
-    image: sqshq/piggymetrics-mongodb
+      MONGODB_PASSWORD: switcher05
+    image: switcher/piggymetrics-mongodb
     restart: always
     logging:
       options:
@@ -79,10 +79,10 @@ services:
 
   account-service:
     environment:
-      CONFIG_SERVICE_PASSWORD: $CONFIG_SERVICE_PASSWORD
-      ACCOUNT_SERVICE_PASSWORD: $ACCOUNT_SERVICE_PASSWORD
-      MONGODB_PASSWORD: $MONGODB_PASSWORD
-    image: sqshq/piggymetrics-account-service
+      CONFIG_SERVICE_PASSWORD: switcher05
+      ACCOUNT_SERVICE_PASSWORD: switcher05
+      MONGODB_PASSWORD: switcher05
+    image: switcher/piggymetrics-account-service
     restart: always
     depends_on:
       config:
@@ -95,8 +95,8 @@ services:
   account-mongodb:
     environment:
       INIT_DUMP: account-service-dump.js
-      MONGODB_PASSWORD: $MONGODB_PASSWORD
-    image: sqshq/piggymetrics-mongodb
+      MONGODB_PASSWORD: switcher05
+    image: switcher/piggymetrics-mongodb
     restart: always
     logging:
       options:
@@ -105,10 +105,10 @@ services:
 
   statistics-service:
     environment:
-      CONFIG_SERVICE_PASSWORD: $CONFIG_SERVICE_PASSWORD
-      MONGODB_PASSWORD: $MONGODB_PASSWORD
-      STATISTICS_SERVICE_PASSWORD: $STATISTICS_SERVICE_PASSWORD
-    image: sqshq/piggymetrics-statistics-service
+      CONFIG_SERVICE_PASSWORD: switcher05
+      MONGODB_PASSWORD: switcher05
+      STATISTICS_SERVICE_PASSWORD: switcher05
+    image: switcher/piggymetrics-statistics-service
     restart: always
     depends_on:
       config:
@@ -120,8 +120,8 @@ services:
 
   statistics-mongodb:
     environment:
-      MONGODB_PASSWORD: $MONGODB_PASSWORD
-    image: sqshq/piggymetrics-mongodb
+      MONGODB_PASSWORD: switcher05
+    image: switcher/piggymetrics-mongodb
     restart: always
     logging:
       options:
@@ -130,10 +130,10 @@ services:
 
   notification-service:
     environment:
-      CONFIG_SERVICE_PASSWORD: $CONFIG_SERVICE_PASSWORD
-      MONGODB_PASSWORD: $MONGODB_PASSWORD
-      NOTIFICATION_SERVICE_PASSWORD: $NOTIFICATION_SERVICE_PASSWORD
-    image: sqshq/piggymetrics-notification-service
+      CONFIG_SERVICE_PASSWORD: switcher05
+      MONGODB_PASSWORD: switcher05
+      NOTIFICATION_SERVICE_PASSWORD: switcher05
+    image: switcher/piggymetrics-notification-service
     restart: always
     depends_on:
       config:
@@ -144,10 +144,10 @@ services:
         max-file: "10"
 
   notification-mongodb:
-    image: sqshq/piggymetrics-mongodb
+    image: switcher/piggymetrics-mongodb
     restart: always
     environment:
-      MONGODB_PASSWORD: $MONGODB_PASSWORD
+      MONGODB_PASSWORD: switcher05
     logging:
       options:
         max-size: "10m"
@@ -155,8 +155,8 @@ services:
 
   monitoring:
     environment:
-      CONFIG_SERVICE_PASSWORD: $CONFIG_SERVICE_PASSWORD
-    image: sqshq/piggymetrics-monitoring
+      CONFIG_SERVICE_PASSWORD: switcher05
+    image: switcher/piggymetrics-monitoring
     restart: always
     depends_on:
       config:
@@ -170,8 +170,8 @@ services:
 
   turbine-stream-service:
     environment:
-      CONFIG_SERVICE_PASSWORD: $CONFIG_SERVICE_PASSWORD
-    image: sqshq/piggymetrics-turbine-stream-service
+      CONFIG_SERVICE_PASSWORD: switcher05
+    image: switcher/piggymetrics-turbine-stream-service
     restart: always
     depends_on:
       config:
